syntax = "proto3";
package user;

service UserApi {
  rpc Create (CreateRequest) returns (CreateResponse);
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  string message = 1;
}
